nav bar hover,img slider,transition animation in 4th sec

--- a/dayThree-6-7-2021/test/tes2.html
+++ b/dayThree-6-7-2021/test/tes2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./test2.css">
+    <link rel="stylesheet" href="./test.css">
     <script src="./test.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar">
+    <!-- <nav class="navbar">
         <div class="brand-title">Brand Name</div>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
@@ -23,6 +23,57 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
-      </nav>
+      </nav> -->
+
+      <div class="container">
+          <nav class="nav-bar">
+            <ul>
+              <li>menu
+                <div class="mega-menu">
+                  <div class="inner-mega-menu">
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                  </div>
+
+                  <div class="inner-mega-menu">
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                  </div>
+
+                  <div class="inner-mega-menu">
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                  </div>
+
+                  <div class="inner-mega-menu">
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                    <P>mega-menu</P>
+                  </div>
+                </div>
+              </li>
+              <li>menu</li>
+              <li>menu</li>
+              <li>menu</li>
+              <li>menu</li>
+              <li>menu</li>
+              
+
+            </ul>
+          </nav>
+
+          <div class="header-banner"></div>
+      </div>
 </body>
 </html>
