--- a/dayThree-6-7-2021/project3-ncellHomePage.html
+++ b/dayThree-6-7-2021/project3-ncellHomePage.html
@@ -34,6 +34,7 @@
                             <div class="nav-bottom-right">
                                <i class="fas fa-search"></i>
                                <i class="far fa-user"></i>
+                               <i class="fas fa-bars"></i>
             
                            </div>
             
@@ -213,7 +214,7 @@
                     </p>
                     <h3>Get it on</h3>
 
-                    <div>
+                    <div class="btn">
                     <button>Android</button>
                     <button>IOS</button>
                     </div>
