header box lining for links redone with responsive

--- a/dayFour-6-11-2021/header and footer only page/shoesWebPage1.html
+++ b/dayFour-6-11-2021/header and footer only page/shoesWebPage1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./shoesWeb.css"/>
+    <link rel="stylesheet" href="./shoesWebPage1.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <script src="https://kit.fontawesome.com/b717b6ac83.js" crossorigin="anonymous"></script>
     <title>Document</title>
