passing arrays to local storage done

--- a/dayFive(register and login page with js and local storage)/main-loginPage.html
+++ b/dayFive(register and login page with js and local storage)/main-loginPage.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main-loginPage.css">
     <script src="./main.js"></script>
+    <!-- <script src="./main2.js"></script> -->
     <script src="https://kit.fontawesome.com/b717b6ac83.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -31,7 +32,7 @@
                 <script src="./eyeforlogin.js"></script>
             </div>
             
-            <button onclick="login() ">Login</button>
+            <button id="btnl" onclick="login()">Login</button>
 
             <div class="text">
                 <p>Already have account?<a href="./registerPage.html">Register</a></p>
