--- a/dayFive(register and login page with js and local storage)/registerPage.html
+++ b/dayFive(register and login page with js and local storage)/registerPage.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./registerPage.css">
     <script src="./main.js"></script>
+    <!-- <script src="./main2.js"></script> -->
     <script src="https://kit.fontawesome.com/b717b6ac83.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
@@ -40,7 +41,7 @@
             <li class="special">Must contain a number or special character.</li>
         </ul>
 
-        <button onclick="register()" >REGISTER</button>
+        <button id="btnr"  onclick="register()">REGISTER</button>
 
         <div class="text">
             <p>Already have account?<a href="./main-loginPage.html">Login</a></p>
