--- a/dayFive(register and login page with js and local storage)/registerPage.html
+++ b/dayFive(register and login page with js and local storage)/registerPage.html
@@ -29,8 +29,8 @@
         </div>
         
         <div class="password">
-            <input type="text" placeholder="password" name="password" id="userPassword" required>
-            <i class="far fa-eye" id="togglePassword"></i>
+            <input type="password" placeholder="password" name="password" id="userPassword" required >
+            <i class="far fa-eye-slash" id="togglePassword"></i>
             <script src="./eyeforregister.js"></script>
         </div>
 
@@ -41,7 +41,7 @@
             <li class="special">Must contain a number or special character.</li>
         </ul>
 
-        <button id="btnr"  onclick="register()">REGISTER</button>
+        <button id="btnr"  onclick="register()"  >REGISTER</button>
 
         <div class="text">
             <p>Already have account?<a href="./main-loginPage.html">Login</a></p>
@@ -51,3 +51,8 @@
 
 </body>
 </html>
+
+
+
+
+
