--- a/daySix(Weather app using open weather api)/weatherApp.html
+++ b/daySix(Weather app using open weather api)/weatherApp.html
@@ -23,8 +23,8 @@
       <div class="display">
         <h1 id="name">Name</h1>
         <img id="tempIcon" src="./images/atmosphere.svg" alt="" />
-        <p id="temp">temp</p>
-        <p id="desc">desc</p>
+        <p id="temp">Temperature</p>
+        <p id="desc">Description</p>
       </div>
    
 
